Place text on either side of toggle switch
Was able to get CSS styling to place text on either side of toggle
switch.

Still need to figure out how to vertically align text to switch. May
have to end up going with standard bootstrap toggle switch.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
     
     <!--Toggle Switch-->
     <!--Need to figure out how to get text next to it-->
-    <div id='toggle-switch' class='center-block'>
-      <input id='cmn-toggle-4' class='center-block cmn-toggle cmn-toggle-round-flat' type='checkbox'>
-      <label for='cmn-toggle-4'></label>
+    <div class='container'>
+      <div id='toggle-switch'>
+        <span class='span-class'>text</span>
+        <input id='cmn-toggle-4' class='cmn-toggle cmn-toggle-round-flat' type='checkbox'>
+        <label class='label-class' for='cmn-toggle-4'></label>
+        <span class='span-class'>text</span>
+      </div>
     </div>
     
     <!--Temperature-->
